#1: fix spacing function and fix broken header on Safari

--- a/docs/_scss/_shame.scss
+++ b/docs/_scss/_shame.scss
@@ -28,7 +28,7 @@ header {
     width: 220%;
     height: 220%;
     background: linear-gradient(248deg, $color1, $color2, $color3);
-    transform: translate(0, 0) rotate(0deg);
+    transform: translate(0, 0);
     animation: headerAnimate 20s ease infinite;
   }
 
@@ -45,13 +45,13 @@ header {
 
 @keyframes headerAnimate {
   0% {
-    transform: translate(0, 0) rotate(0deg);
+    transform: translate(0, 0);
   }
   50% {
-    transform: translate(-50%, -50%) rotate(3deg);
+    transform: translate(-50%, 0);
   }
   100% {
-    transform: translate(0, 0) rotate(0deg);
+    transform: translate(0, 0);
   }
 }
 
